src/marksapp/static/marksapp/style.css
body {
    background-color: #F5F5F5;
    padding-top: 0;
    margin: 0;
    font-family: 'Rubik', Helvetica, Arial, sans-serif;
    width: 100%;
    height: 100%;
}

.container {
    background-color: white;
    padding: 15px;
    overflow: auto;
}

/* navbar ------------------------------------- */

#navbar {
    position: relative;
    top: 0;
    left: 0;
    padding: 5px 0 5px 0;
}

#navbar ul {
    margin-left: 15px;
}

#navbar li {
    display: inline-block;
    font-size: 16px;
    color: #7F7F7F;
    margin-right: 20px;
}

#navbar a {
    color: #7F7F7F;
}

.active {
    font-weight: 500;
}

/* extra nav ---------------------------------- */

.extra-nav {
    border-top: 1px solid #D8D8D8;
    border-bottom: 1px solid #D8D8D8;
    margin-bottom: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    max-width: 535px;
}

.extra-nav a {
    display: inline-block;
    color: #3F91CC;
    text-decoration: none;
}

.extra-nav .separator {
    margin-left: 5px;
    margin-right: 5px;
    color: #3F91CC;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

/* page title --------------------------------- */

#page-info,
#page-info a {
    margin-top: 0;
    padding-top: 0;
    font-size: 24px;
    margin-bottom: 15px;
    text-decoration: none;
}

.just-green,
.just-green a {
    font-weight: 400;
    color: #3cb568;
}

.italic {
    font-style: italic;
}

.green-and-bold,
.green-and-bold a {
    font-weight: 500;
    color: #3cb568;
}

.plus {
    padding: 0 5px 0 5px;
    margin-right: 5px;
    color: #7f7f76;
}

/* form --------------------------------------- */

.form-container {
    position: relative;
    padding: 15px;
    margin: 15px 0 15px 0;
    width: 500px;
    background-color: #F5F5F5;
    border: 2px solid #F5F5F5;
    border-radius: 2px;
}

.form-container::after {
    clear: both;
    content: "";
    display: block;
}

.errorlist {
    margin-bottom: 10px;
}

label {
    display: block;
    width: 500px;
    font-size: 16px;
    color: #7F7F7F;
    margin-bottom: 10px;
}

input[type='text'],
input[type=password],
input[type=email],
input[type=file],
textarea {
    font-family: 'Rubik', Helvetica, Arial, sans-serif;
    background-color: #FEFEFE;
    border: 1px solid #979797;
    border-radius: 2px;
    font-size: 14px;
    color: #959595;
    width: 480px;
    padding: 10px;
    box-shadow: inset 2px 2px 0 rgba(0, 0, 0, .04), 2px 2px 0 rgba(0, 0, 0, .04);
    outline: none;
    margin-bottom: 15px;
}

input[type='text']:focus,
input[type=password]:focus,
input[type=email]:focus,
input[type=file]:focus,
input[type=submit]:focus,
button:focus,
textarea:focus {
    box-shadow: 0 0 5px rgba(63, 145, 204, .8);
    border-color: #1A79AA;
}

input[type=checkbox] {
    margin: 0 5px 0 0;
}

textarea {
    min-height: 17px;
    resize: vertical;
}

input[type=submit],
button {
    position: relative;
    font-family: 'Rubik', Helvetica, Arial, sans-serif;
    background-color: #FEFEFE;
    border: 1px solid #979797;
    border-radius: 2px;
    font-size: 14px;
    color: #959595;
    padding: 10px;
    box-shadow: 2px 2px 0 rgba(0, 0, 0, .04);
    outline: none;
    float: right;
}

input[type=submit]:hover,
button:hover {
    background-color: #3F91CC;
    color: #FFFFFF;
    border-color: #1A79AA;
}

::placeholder {
    color: #CCCCCC;
    font-style: italic;
}

/* main site ---------------------------------- */

.marginbottom {
    margin-bottom: 20px;
}

ul, ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

li, li > a, li span {
    color: #3F91CC;
    font-size: 14px;
    font-weight: 400;
    text-decoration: none;
}

.item {
    margin-bottom: 5px;
    white-space: nowrap;
}

.item > a, .item > .number, .item > .action {
    margin-right: 5px;
}

.item > a:hover {
    border-bottom: 1px solid #36b2e8;
}

.tag {
    position: relative;
    display: inline-block;
    margin-right: 5px;
    font-size: 14px;
    white-space: nowrap;
}

.tag a {
    color: #7f7f76;
    text-decoration: none;
    padding: 0 5px 0 5px;
    background-color: #F5F5F5;
    font-weight: 400;
}

.tag a:hover {
    background-color: #DDDDDD;
}

.action {
    /*border: 1px solid #36b2e8;*/
    /*box-shadow: inset 0px 0px 0px 1px #36b2e8;*/
    margin-right: 3px;
}

.action, .action a {
    /*
    background-color: #9ad8eb;
    color: #fffeee;
    */
    color: #9ad8eb;
    padding: 0 1px 0 1px;
    text-decoration: none;
}

.action a:hover {
    text-decoration: underline;
}

.tag > .action {
    /*background-color: #d8d7d2;*/
    padding: 0 5px 0 5px;
    margin-right: 0;
    border-right: 1px solid #d8d7d2;
}

.action:hover {

}

.mdot {
    margin: 0 3px 0 3px;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.big {
    font-size: 24px;
    padding: 5px 0 5px 0 !important;
}

.big a {
    padding: 5px 15px 5px 15px !important;

}

.number {
    color: #B2B2B2;
    font-size: 12px;
    font-weight: 400;
}

/* suggestions -------------------------------- */

#suggestions {
    position: absolute;
    border: 1px solid gray;
    box-shadow: inset 2px 2px 0 rgba(0, 0, 0, .04), 2px 2px 0 rgba(0, 0, 0, .04);
    border-radius: 2px;
    border-top: 0;
    width: 500px;
    background-color: white;
    display: none;
    z-index: 2;
}

#suggestions li {
    list-style-type: none;
    margin: 0;
    padding: 5px;
    background-color: white;
    border-bottom: 1px solid #D8D8D8;
}

#suggestions li:hover, #suggestions .selected {
    background-color: #F5F5F5;
}

#suggestions li:last-of-type {
    border-bottom: 0;
}

.tag-name {
    margin-right: 5px;
}

/* -------------------------------------------- */

.query, .query a {
    color: white;
    background-color: #36b2e8;
}

#search-form {
    display: none;
}

.indextagbg {
    background-color: rgba(0, 0, 0, 0.15);
    width: 90%;
}

.tilde {
    color: #3cb568;
    font-size: 30px;
    margin-top: -13px;
    margin-bottom: 10px;
}

.sort li {
    display: inline-block;
    margin-right: 10px;
}

#filter {
    position: fixed;
    bottom: 0;
}

/* -------------------------------------------- */

.description-container {
    position: relative;
    display: none;
}

.triangle {
    position: absolute;
    width: 12px;
    height: 12px;
    transform: rotate(45deg);
    background-color: #F5F5F5;
    top: -6px;
    left: 10px;
    border-left: 1px solid rgba(0, 0, 0, 0.3);
    border-top: 1px solid rgba(0, 0, 0, 0.3);
    z-index: 2;
}

.description {
    border: 1px solid rgba(0, 0, 0, 0.3);
    position: relative;
    background-color: #F5F5F5;
    min-width: 525px;
    padding: 7px;
    color: black;
    margin: 10px 0 15px 0;
    overflow: visible;
}

.description h1,
.description h2,
.description h3,
.description h4,
.description h5,
.description h6 {
    margin-top: 5px;
    margin-bottom: 5px;
}

.description ul, ol {
    margin-left: 25px;
}

.description ol li {
    list-style-type: decimal;
    color: black;
}

.description ul li {
    list-style-type: square;
    color: black;
}

.description > *:first-child {
    margin-top: 0;
}

.description > *:last-child {
    margin-bottom: 0;
}

.description blockquote {
    color: gray;
    margin: 0;
    padding: 0 10px;
    border-left: 3px solid gray;
}

.description p {
    margin: 5px 0 5px 0;
}

